[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lspiv"
version = "0.1.0"
description = "Large-scale particle image velocimetry from drone video"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "opencv-python",
    "matplotlib",
    "rasterio",
    "stabilo",
    "pyopenrivercam",
]

[project.scripts]
lspiv-stabilize    = "lspiv.stabilize:main"
lspiv-georeference = "lspiv.georeference:main"
lspiv-lab-config   = "lspiv.lab_config:main"
lspiv-piv          = "lspiv.piv:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Integration tests are skipped automatically when data files are absent.
# Run the full suite (including integration) with:
#   conda run -n lspiv-env pytest
# Run only the unit tests (no data needed):
#   conda run -n lspiv-env pytest tests/test_masking.py
